[accelerator] fix overflow in tx page integrated accel

--- a/frontend/src/app/components/accelerate-preview/accelerate-preview.component.scss
+++ b/frontend/src/app/components/accelerate-preview/accelerate-preview.component.scss
@@ -18,3 +18,10 @@
   opacity: 0.5;
   pointer-events: none;
 }
+
+.table-accelerator {
+  table-layout: fixed;
+  & tr {
+    text-wrap: wrap;
+  }
+}
